--- a/.github/workflows/deploy-alz.yml
+++ b/.github/workflows/deploy-alz.yml
@@ -247,6 +247,35 @@ jobs:
         run: |
           az account set --subscription ${{ env.AZURE_SUBSCRIPTION_ID }}
           az account show
+      
+      - name: Prepare Subscription for Deployment
+        run: |
+          echo "Checking subscription management group assignment..."
+          SUBSCRIPTION_ID="${{ env.AZURE_SUBSCRIPTION_ID }}"
+          TENANT_ROOT_GROUP_ID="23285b8c-1596-4f14-adc2-fd472cc70cc8"
+          TARGET_MG="Pemex-platform"
+          
+          # Get current management group
+          CURRENT_MG=$(az account management-group subscription show \
+            --name "$TARGET_MG" \
+            --subscription "$SUBSCRIPTION_ID" \
+            --query "id" -o tsv 2>/dev/null || echo "")
+          
+          # If subscription is already in Pemex-platform, move it to Tenant Root Group first
+          # This prevents conflicts when the template tries to move it
+          if [ -n "$CURRENT_MG" ] && [[ "$CURRENT_MG" == *"$TARGET_MG"* ]]; then
+            echo "Subscription is already in $TARGET_MG. Moving to Tenant Root Group to prevent conflicts..."
+            az account management-group subscription remove \
+              --name "$TARGET_MG" \
+              --subscription "$SUBSCRIPTION_ID" || true
+            sleep 2
+            az account management-group subscription add \
+              --name "$TENANT_ROOT_GROUP_ID" \
+              --subscription "$SUBSCRIPTION_ID" || true
+            echo "Subscription moved to Tenant Root Group. Template will move it to $TARGET_MG during deployment."
+          else
+            echo "Subscription is not in $TARGET_MG. No action needed."
+          fi
 
       - name: Create Resource Group (if not exists)
         run: |
